Changelog
=========


1.2.1 (unreleased)
------------------

- Remove z3c.autoinclude includeDependencies, no longer required.
  [jone]


1.2 (2013-06-21)
----------------

- Use own permission to manage globalstatusmessages.
  [Julian Infanger]

- Drop Plone 4.0 support.
  [jone]


1.1 (2012-05-21)
----------------

- Make Plone 4.1.x compatible.
  [mathias.leimgruber]

- Prepare for public release.
  [mathias.leimgruber]

1.0 (2011-04-12)
----------------
- Fix egg structure / added readme
  [mathias.leimgruber]

- Initial release
  [ttschanz]