@@ -1,24 +1,0 @@
-# make globalstatusmessage active and enter some values:
-
->>> self.setRoles(['Contributor'])
->>> from ftw.globalstatusmessage.interfaces import IStatusMessageConfigForm
->>> from ftw.globalstatusmessage.config import FormAdapter
->>> testConfig = IStatusMessageConfigForm(self.portal)
->>> testConfig.get_active()
-False
->>> testConfig.set_active(True)
->>> testConfig.get_active()
-True
->>> testConfig.set_message("Test")
->>> testConfig.get_message()
-u'Test'
->>> testConfig.get_title()
-'Title'
->>> testConfig.set_title("Information")
->>> testConfig.get_title()
-'Information'
->>> testConfig.get_type()
-'information'
->>> testConfig.set_type("error")
->>> testConfig.get_type()
-'error'
